--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html {
 
 .sidebar {
   width: 20%;
-  background-color: rgb(134, 128, 128);
+  background-color: #1a1a1a;
   padding: 20px;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   position: fixed;
@@ -29,7 +29,8 @@ html {
 .logo h1 {
   font-size: 1.5rem;
   margin-bottom: 20px;
-  color: rgb(63, 61, 61);
+  color: #ffffff;
+  margin-left: 0;
 }
 
 .sidebar ul {
@@ -37,17 +38,18 @@ html {
 }
 
 .sidebar li {
-  margin: 20px 0;
+  margin-left: 5%;
+  margin-bottom: 8%;
 }
 
 .sidebar a {
   text-decoration: none;
-  color: #eeeaea;
+  color: white;
   font-size: 30px;
 }
 .sidebar a:hover {
-  color: black;
-  border-left: 3px solid black;
+  color: white;
+  border-bottom: 3px solid white;
 }
 
 .main-content {
@@ -63,6 +65,7 @@ html {
 .overlay {
   background-image: url('https://cdn.pixabay.com/photo/2016/11/23/14/45/coding-1853305_1280.jpg');
   background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
   height: 100%;
   display: flex;
@@ -155,6 +158,7 @@ html {
 }
 
 .member-content {
+  width: 80%;
   margin-left: 20%;
 }
 .member-content h1 {
@@ -199,4 +203,57 @@ html {
 .member_container a {
   text-decoration: none;
   color: #333333;
+}
+
+/* 미디어 쿼리 */
+@media all and (max-width: 767px) {
+  .container {
+    height: 80%;
+  }
+  .overlay {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+  }
+  .main-content {
+    margin-left: 20%;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    align-items: start;
+    justify-content: start;
+  }
+  .sidebar {
+    width: 20%;
+  }
+  .sidebar h1 {
+    padding: 0;
+    margin-bottom: 30%;
+    font-size: 90%;
+
+    width: 5%;
+  }
+  .sidebar a {
+    font-size: 80%;
+  }
+  .portpolio-content h1 {
+    font-size: 20%;
+  }
+  .member_container {
+    width: 80%;
+    grid-template-columns: repeat(1, 1fr);
+    margin-left: 20%;
+  }
+  .card img {
+    width: 60%;
+    height: 65%;
+    margin-top: 48%;
+  }
+  .card-head {
+    width: 60%;
+  }
+  .card-footer {
+    width: 60%;
+  }
 }
