--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ html {
 .sidebar a {
   text-decoration: none;
   color: white;
-  font-size: 30px;
+  font-size: 40px;
 }
 .sidebar a:hover {
   color: white;
@@ -204,7 +204,58 @@ html {
   text-decoration: none;
   color: #333333;
 }
+#team_page {
+  width: 10%;
+  height: 30px;
+  margin-top: 5%;
+  margin-left: 86%;
+  border-radius: 3%;
+  border: 1px solid #333;
+  background-color: #fff;
+  color: black;
+}
+#team_page:hover {
+  border: 1px solid black;
+  background-color: black;
+  color: white;
+}
 
+.link-content {
+  margin-left: 20%;
+  height: 1000px;
+  margin-top: 20%;
+  width: 80%;
+}
+
+.link-content h1 {
+  text-align: center;
+}
+.link {
+  margin-top: 10%;
+  display: flex;
+  justify-content: center;
+  gap: 7%;
+}
+.link li {
+  list-style-type: none;
+}
+.link a {
+  text-decoration: none;
+  color: black;
+  font-size: 50px;
+}
+.webp {
+  border: 1px solid black;
+  border-radius: 5%;
+  padding: 3%;
+  width: 40%;
+}
+.club {
+  border: 1px solid black;
+  border-radius: 5%;
+  padding: 3%;
+  width: 40%;
+}
 /* 미디어 쿼리 */
 @media all and (max-width: 767px) {
   .container {
