--- a/style.css
+++ b/style.css
@@ -1,15 +1,26 @@
-/* index.css */
+@font-face {
+  @font-face {
+    font-family: 'TheJamsil5Bold';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2302_01@1.0/TheJamsil5Bold.woff2')
+      format('woff2');
+    font-weight: 700;
+    font-style: normal;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  font-family: 'TheJamsil5Bold';
 }
 
 body,
 html {
   height: 100%;
   font-family: Arial, sans-serif;
+  background-color: rgb(40, 39, 39);
 }
 
 .container {
@@ -121,6 +132,7 @@ html {
 .portpolio-content {
   margin-left: 20%;
   margin-top: 5%;
+  color: white;
 }
 .portpolio-content h1 {
   text-align: center;
@@ -160,6 +172,7 @@ html {
 .member-content {
   width: 80%;
   margin-left: 20%;
+  color: white;
 }
 .member-content h1 {
   margin-top: 5%;
@@ -234,39 +247,57 @@ html {
 
 .link-content {
   margin-left: 20%;
-  height: 1000px;
+  height: 100%;
   margin-top: 20%;
   width: 80%;
+  color: white;
 }
 
 .link-content h1 {
   text-align: center;
 }
 .link {
-  margin-top: 10%;
+  margin-top: 5%;
+}
+.link-top {
   display: flex;
   justify-content: center;
-  gap: 7%;
+  width: 100%;
+  height: 100%;
+  background-color: #1a1a1a;
 }
-.link li {
+.link-top ul {
+  display: flex;
+  justify-content: center;
+  gap: 20%;
+  width: 80%;
+}
+.link-top li {
   list-style-type: none;
 }
-.link a {
-  text-decoration: none;
-  color: black;
-  font-size: 50px;
+.link-top button {
+  font-size: 300%;
+  width: 100%;
+  height: 100%;
+  border: 3px solid #1a1a1a;
+  background-color: #1a1a1a;
+  color: white;
 }
-.webp {
-  border: 1px solid black;
-  border-radius: 5%;
-  padding: 3%;
-  width: 40%;
+.link-top button:hover {
+  border: 3px solid white;
 }
-.club {
-  border: 1px solid black;
-  border-radius: 5%;
-  padding: 3%;
-  width: 40%;
+.link .pdf {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  display: none;
+  margin-left: 15%;
+}
+.link embed {
+  margin-top: 3%;
+  height: 600px;
+  width: 80%;
 }
 /* 미디어 쿼리 */
 @media all and (max-width: 767px) {
@@ -305,8 +336,7 @@ html {
   }
   .member_container {
     width: 80%;
-    grid-template-columns: repeat(1, 1fr);
-    margin-left: 10%;
+    grid-template-columns: repeat(2, 1fr);
     height: 100%;
   }
   .card {
@@ -324,5 +354,11 @@ html {
   .card-footer {
     width: 100%;
     font-size: 20%;
+  }
+  .link li button {
+    font-size: 100%;
+  }
+  .pdf embed {
+    width: 100%;
   }
 }
